--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.19.1",
     "firebase": "^7.6.1",
     "gatsby": "^2.18.12",
+    "gatsby-background-image": "^0.9.12",
     "gatsby-firesource": "^2.0.3",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-firebase": "^0.1.7",
